修复因mvc：annotation-driver的mvc

--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,10 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>co.bugu</groupId>
   <artifactId>tes</artifactId>
-  <packaging>war</packaging>
+  <packaging>pom</packaging>
   <version>1.0-SNAPSHOT</version>
+  <modules>
+  </modules>
   <name>tes Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <dependencies>
