--- a/pom.xml
+++ b/pom.xml
@@ -3,10 +3,12 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>co.bugu</groupId>
   <artifactId>tes</artifactId>
-  <packaging>pom</packaging>
+  <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
+
   <modules>
   </modules>
+
   <name>tes Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <dependencies>
@@ -116,11 +118,11 @@
       <version>1.7.7</version>
     </dependency>
 
-    <!--<dependency>-->
-      <!--<groupId>javax.servlet.jsp</groupId>-->
-      <!--<artifactId>javax.servlet.jsp-api</artifactId>-->
-      <!--<version>2.3.1</version>-->
-    <!--</dependency>-->
+    <dependency>
+      <groupId>javax.servlet.jsp</groupId>
+      <artifactId>javax.servlet.jsp-api</artifactId>
+      <version>2.3.1</version>
+    </dependency>
 
     <dependency>
       <groupId>javax.servlet</groupId>
@@ -172,5 +174,20 @@
   </dependencies>
   <build>
     <finalName>tes</finalName>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.1</version>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+          <compilerArgument>-Xlint:all</compilerArgument>
+          <showWarnings>true</showWarnings>
+          <showDeprecation>true</showDeprecation>
+          <encoding>UTF-8</encoding>
+        </configuration>
+      </plugin>
+    </plugins>
   </build>
 </project>
