--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,11 @@
       <artifactId>slf4j-api</artifactId>
       <version>1.7.7</version>
     </dependency>
+    <dependency>
+      <groupId>org.logback-extensions</groupId>
+      <artifactId>logback-ext-spring</artifactId>
+      <version>0.1.2</version>
+    </dependency>
 
     <dependency>
       <groupId>javax.servlet.jsp</groupId>
