--- a/src/main/resources/conf/db.properties
+++ b/src/main/resources/conf/db.properties
@@ -1,6 +1,11 @@
-db.url=jdbc:mysql://localhost:3306/tes
-db.username=root
-db.password=root
+#db.url=jdbc:mysql://localhost:3306/tes
+#db.username=root
+#db.password=root
+
+db.url=jdbc:mysql://114.215.142.252:3306/tes
+db.username=admin
+db.password=admin!@#$%
+
 db.initialSize=10
 db.minIdle=2
 db.maxActive=50
